--- a/5. Bootstrap/index.html
+++ b/5. Bootstrap/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default">
+    <div class="navbar navbar-inverse">
 
       <div class="container">
 
@@ -62,17 +62,61 @@
 
     </div>
 
-    <h1>Hello, world!</h1>
+    <div class="container">
+
+      <h1>Our Bootstrap Page</h1>
+
+      <form class="form-inline">
+
+        <div class="form-group">
+
+          <label for="username">Username</label>
+
+          <input type="date" class="form-control" name="username"/>
+
+        </div>
+
+        <div class="form-group">
+
+          <label for="password">Password</label>
+
+          <input type="password" class="form-control" name="password"/>
+
+        </div>
+
+        <div class="checkbox">
+
+          <label>
+
+            <input type="checkbox"> Keep me logged in </input>
+
+          </label>
+
+        </div>
+
+        <div class="form-group">
+
+          <input type="submit" name="login" value="Log In" class="btn btn-default"/>
+
+        </div>
+
+      </form>
+
+      <table class="table table-striped table-bordered">
+
+        <tr><th>Name</th><th>Age</th></tr>
+
+        <tr class="success"><td>Mauricio</td><td>18</td></tr>
+        <tr><td>Helen</td><td>29</td></tr>
+        <tr><td class="danger">Sarah</td><td>35</td></tr>
+
+      </table>
+
+    </div>
 
     <div class="container">
 
-      <div class="row">
 
-        <div class="col-md-4 box">Content</div>
-        <div class="col-md-4 box">Content</div>
-        <div class="col-md-4 box">Content</div>
-
-      </div>
 
     </div>
 
