--- a/5. Bootstrap/index.html
+++ b/5. Bootstrap/index.html
@@ -14,6 +14,11 @@
         background-color: #d3d3d3;
       }
 
+      .large {
+        font-size: 400%;
+        color: red;
+      }
+
     </style>
 
     <!-- Bootstrap -->
@@ -60,63 +65,39 @@
 
       </div>
 
-    </div>
+    </div>      
 
     <div class="container">
 
-      <h1>Our Bootstrap Page</h1>
+      <span class="glyphicon glyphicon-search large"></span>
 
-      <form class="form-inline">
+      <div class="input-group">
 
-        <div class="form-group">
+        <span class="glyphicon glyphicon-user"></span>
+        <input class="form-control" type="text"/>
 
-          <label for="username">Username</label>
+      </div>
 
-          <input type="date" class="form-control" name="username"/>
+      <button type="button" class="btn btn-success">
+      <span class="glyphicon glyphicon-calendar">Calendar</span>
+      </button>
 
-        </div>
+      <div class="alert alert-success alert-dismissable">
 
-        <div class="form-group">
+        <button type="button" class="close" data-dismiss="alert">x</button>
 
-          <label for="password">Password</label>
+        You've done it!
 
-          <input type="password" class="form-control" name="password"/>
+      </div>
 
-        </div>
+      <ul class="list-group">
 
-        <div class="checkbox">
+        <li class="list-group-item">Inbox<span class="badge">12</span></li>
+        <li class="list-group-item">Sent<span class="badge">2</span></li>
+        <li class="list-group-item">Item 3</li>
+        <li class="list-group-item">Item 4</li>
 
-          <label>
-
-            <input type="checkbox"> Keep me logged in </input>
-
-          </label>
-
-        </div>
-
-        <div class="form-group">
-
-          <input type="submit" name="login" value="Log In" class="btn btn-default"/>
-
-        </div>
-
-      </form>
-
-      <table class="table table-striped table-bordered">
-
-        <tr><th>Name</th><th>Age</th></tr>
-
-        <tr class="success"><td>Mauricio</td><td>18</td></tr>
-        <tr><td>Helen</td><td>29</td></tr>
-        <tr><td class="danger">Sarah</td><td>35</td></tr>
-
-      </table>
-
-    </div>
-
-    <div class="container">
-
-
+      </ul>
 
     </div>
 
