--- a/5. Bootstrap/index.html
+++ b/5. Bootstrap/index.html
@@ -69,35 +69,40 @@
 
     <div class="container">
 
-      <span class="glyphicon glyphicon-search large"></span>
+        <button class="btn btn-success" data-toggle="modal" data-target="#myModal">Launch Modal</button>
 
-      <div class="input-group">
+      <div class="modal" id="myModal">
 
-        <span class="glyphicon glyphicon-user"></span>
-        <input class="form-control" type="text"/>
+        <div class="modal-dialog">
+
+          <div class="modal-content">
+
+            <div class="modal-header">
+
+              <button class="close" data-dismiss="modal">x</button>
+
+              <h4 class="modal-title">My Modal!</h4>
+
+            </div>
+
+            <div class="modal-body">
+
+              This is some content for my first modal.
+
+            </div>
+
+            <div class="modal-footer">
+
+              <button class="btn btn-default" data-dismiss="modal">Close</button>
+              <button class="btn btn-success">Save Changes</button>
+
+            </div>
+
+          </div>
+
+        </div>
 
       </div>
-
-      <button type="button" class="btn btn-success">
-      <span class="glyphicon glyphicon-calendar">Calendar</span>
-      </button>
-
-      <div class="alert alert-success alert-dismissable">
-
-        <button type="button" class="close" data-dismiss="alert">x</button>
-
-        You've done it!
-
-      </div>
-
-      <ul class="list-group">
-
-        <li class="list-group-item">Inbox<span class="badge">12</span></li>
-        <li class="list-group-item">Sent<span class="badge">2</span></li>
-        <li class="list-group-item">Item 3</li>
-        <li class="list-group-item">Item 4</li>
-
-      </ul>
 
     </div>
 
