--- a/5. Bootstrap/index.html
+++ b/5. Bootstrap/index.html
@@ -19,6 +19,22 @@
         color: red;
       }
 
+      #div1 {
+        background-color: blue;
+      }
+
+      #div2 {
+        background-color: red;
+      }
+
+      #div3 {
+        background-color: green;
+      }
+
+      .contentDiv {
+        height: 800px;
+      }
+
     </style>
 
     <!-- Bootstrap -->
@@ -31,9 +47,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body data-spy="scroll" data-target=".navbar-collapse">
 
-    <div class="navbar navbar-inverse">
+    <div class="navbar navbar-default navbar-fixed-top">
 
       <div class="container">
 
@@ -55,9 +71,9 @@
 
           <ul class="nav navbar-nav">
 
-            <li class="active"><a href="">Page 1</a></li>
-            <li><a href="">Page 2</a></li>
-            <li><a href="">Page 3</a></li>
+            <li class="active"><a href="#div1">Page 1</a></li>
+            <li><a href="#div2">Page 2</a></li>
+            <li><a href="#div3">Page 3</a></li>
 
           </ul>
 
@@ -69,40 +85,11 @@
 
     <div class="container">
 
-        <button class="btn btn-success" data-toggle="modal" data-target="#myModal">Launch Modal</button>
+       <div id="div1" class="contentDiv">Content</div>
 
-      <div class="modal" id="myModal">
+       <div id="div2" class="contentDiv">Content</div>
 
-        <div class="modal-dialog">
-
-          <div class="modal-content">
-
-            <div class="modal-header">
-
-              <button class="close" data-dismiss="modal">x</button>
-
-              <h4 class="modal-title">My Modal!</h4>
-
-            </div>
-
-            <div class="modal-body">
-
-              This is some content for my first modal.
-
-            </div>
-
-            <div class="modal-footer">
-
-              <button class="btn btn-default" data-dismiss="modal">Close</button>
-              <button class="btn btn-success">Save Changes</button>
-
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
+       <div id="div3" class="contentDiv">Content</div>
 
     </div>
 
